<resources>
  <string name="app_name">Deep Dive Gallery</string>
  <string name="action_settings">Settings</string>

  <string name="gallery_fragment_label">Gallery Fragment</string>
  <string name="image_fragment_label">Image Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="title_activity_login">LoginActivity</string>

  <string name="hello_world">Hello Square World!</string>
  <string name="login_fail_message">Login Failed</string>
  <string name="sign_out">Sign Out</string>

  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="create_dialog_title">Upload Properties</string>
  <string name="pick_image">Choose Image to Uplaod</string>
  <string name="title_of_image_hint">Title of Image</string>
  <string name="description_of_image_hint">Description of Image</string>
  <string name="action_refresh">Refresh</string>
  <string name="gallery_title">Title</string>
  <string name="image_description">Image Description</string>
  <string name="image_title">Image Title</string>
  <string name="gallery_hint">Gallery</string>
  <string name="image_description_text">Image Description</string>
  <string name="image_id">Image ID</string>
  <string name="file_type">File Type</string>
  <string name="date_created">Date Created</string>
  <string name="file_url">File URL</string>
  <string name="gallery_image">Gallery Image</string>
</resources>