<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".controller.ImageDialogFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/image_detail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:adjustViewBounds="true"
      android:contentDescription="@string/gallery_image"
      android:layout_margin="@dimen/half_static_spacing"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@id/image_description"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
      android:id="@+id/image_description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_static_spacing"
      android:text="@string/image_description_text"
      app:layout_constraintTop_toBottomOf="@id/image_detail"
      app:layout_constraintBottom_toTopOf="@id/detail_layout"
      app:layout_constraintStart_toStartOf="parent"
      />

    <LinearLayout
      android:id="@+id/detail_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="@dimen/double_static_spacing"
      android:layout_margin="@dimen/half_static_spacing"
      app:layout_constraintTop_toBottomOf="@id/image_description">

      <TextView
        android:id="@+id/image_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_id"
        style="@style/ImageAttribut"/>

      <TextView
        android:id="@+id/image_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_type"
        style="@style/ImageAttribut"/>

      <TextView
        android:id="@+id/image_date_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_created"
        style="@style/ImageAttribut"/>

      <TextView
        android:id="@+id/image_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_url"
        style="@style/ImageAttribut"/>

    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>